# mylib

./: pyproject.toml
myutils.egg-info/: PKG-INFO  SOURCES.txt
myutils_spdas.egg-info/: PKG-INFO  SOURCES.txt
spdas_myutils.egg-info/: PKG-INFO  SOURCES.txt
