[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myutils"                # package name on PyPI
version = "0.0.1"               # start with 0.0.1
description = "My Python utility package"
readme = "README.md"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
license = { text = "MIT" }
dependencies = []

[project.urls]
"Homepage" = "https://github.com/yourname/myutils"
