[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spdas_myutils"                # package name on PyPI
version = "0.0.1"               # start with 0.0.1
description = "My Python utility package"
readme = "README.md"
authors = [
  { name="Shrikrishna Das", email="spdasgcek@gmail.com" },
]
license = { text = "MIT" }
requires-python = ">=3.14.0"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/spdasbits/mylib"
